--- a/templates/application/pool/pools.twig
+++ b/templates/application/pool/pools.twig
@@ -3,6 +3,7 @@
 {% set page_title = 'Deployment Pools : ' ~ application.name %}
 
 {% set isAdmin = isUserAdminOrSuper(currentUser) or isUserLeadOf(currentUser, application) %}
+{% set canEditShared = isAdmin or canUserBuild(currentUser, application) %}
 
 {% block content %}
     <h1>Deployment Pools - <strong>{{ application.name }}</strong> </h1>
@@ -40,7 +41,6 @@
                     <article class="card--baby">
                         <header class="card__header split">
                             <span class="split__title">{{ view.name }}</span>
-
                             <a href="{{ urlFor('deployment_view', {'view': view.id}) }}">Manage</a>
                         </header>
 
@@ -77,7 +77,7 @@
     {% endif %}
 
     <ul class="button-list">
-        {% if isAdmin %}
+        {% if canEditShared %}
             <li><a class="btn btn--action" href="{{ urlFor('deployment_view.add', {'application': application.id, 'environment': environment.id}) }}">Add View</a></li>
         {% endif %}
 
