Relabel kraken application configuration to configuration status

--- a/templates/kraken/application/application.twig
+++ b/templates/kraken/application/application.twig
@@ -42,7 +42,7 @@
         </dl>
 
         <ul class="button-list">
-            <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Configuration</a></li>
+            <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Configuration Status</a></li>
 
             {% if isAdmin %}
                 <li><a class="btn" href="{{ urlFor('kraken.schema', {application: application.id}) }}">Manage Schema</a></li>
