--- a/templates/kraken/application/schema/schema.twig
+++ b/templates/kraken/application/schema/schema.twig
@@ -16,7 +16,7 @@
         <li><a class="btn btn--action" href="{{ urlFor('kraken.schema.add', {application: application.id}) }}">Add Property to Schema</a></li>
 
         <li><a class="btn" href="{{ urlFor('kraken.application', {application: application.id}) }}">Application</a></li>
-        <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Configuration</a></li>
+        <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Configuration Status</a></li>
     </ul>
 
 {% endblock %}
