--- a/templates/kraken/applications.twig
+++ b/templates/kraken/applications.twig
@@ -40,7 +40,7 @@
                             {% endif %}
                         </td>
                         <td class="tr">
-                            <a class="btn btn--small" href="{{ urlFor('kraken.status', {application: application.id}) }}">Configuration</a>
+                            <a class="btn btn--small" href="{{ urlFor('kraken.status', {application: application.id}) }}">Configuration Status</a>
                         </td>
                     </tr>
                 {% endfor %}
