--- a/templates/kraken/configuration/history.twig
+++ b/templates/kraken/configuration/history.twig
@@ -5,7 +5,7 @@
 {% set page_title = "Configuration History : " ~ application.name %}
 
 {% block content %}
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('kraken.status', {application: application.id}) }}">Back to Application Configuration</a></p>
+    <p><a class="btn btn--small btn--back" href="{{ urlFor('kraken.status', {application: application.id}) }}">Back to Configuration Status</a></p>
 
     <h1>Configuration History - <strong>{{ application.name }}</strong></h1>
 
