--- a/templates/kraken/configuration/latest/configuration.twig
+++ b/templates/kraken/configuration/latest/configuration.twig
@@ -32,7 +32,7 @@
 
     <ul class="leader button-list">
 
-        <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Configuration</a></li>
+        <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Configuration Status</a></li>
         <li><a class="btn btn--secondary" href="{{ urlFor('kraken.application', {application: application.id}) }}">Configuration Schema</a></li>
 
         {% if deployed %}
