--- a/templates/application/status.twig
+++ b/templates/application/status.twig
@@ -144,7 +144,7 @@
                     {% if pooled %}
                         <div>
                             <h3>{{ pool.name }}</h3>
-                            <ul class="list--bare cards cards--{{ selected_environment.name }}">
+                            <ul class="list--bare cards">
                                 {% for status in pooled %}
                                     <li data-deploy="{{ status.deploy.id }}">{{ page_macros.pushCard(application, status.deploy, status.latest) }}</li>
                                 {% endfor %}
@@ -165,7 +165,7 @@
                 {% if unpooled %}
                     <div>
                         <h3>Unpooled</h3>
-                        <ul class="list--bare cards cards--{{ selected_environment.name }}">
+                        <ul class="list--bare cards">
                             {% for status in unpooled %}
                                 <li data-deploy="{{ status.deploy.id }}">{{ page_macros.pushCard(application, status.deploy, status.latest) }}</li>
                             {% endfor %}
@@ -175,7 +175,7 @@
 
             {% else %}
                 <div>
-                    <ul class="list--bare cards cards--{{ selected_environment.name }}">
+                    <ul class="list--bare cards">
                         {% for status in deployment_statuses %}
                             <li data-deploy="{{ status.deploy.id }}">{{ page_macros.pushCard(application, status.deploy, status.latest) }}</li>
                         {% endfor %}
@@ -213,7 +213,7 @@
 {% macro pushCard(application, deployment, active) %}
     {% import '_partial/macros.twig' as macros %}
 
-    <article class="card">
+    <article class="card card--{{ deployment.server.environment.name }}">
         <header class="card__header">
             <h4>
                 <a href="{{ urlFor('server', {'id': deployment.server.id}) }}">{{ deployment|formatDeploymentServer }}</a>
