--- a/templates/application/pool/pools.twig
+++ b/templates/application/pool/pools.twig
@@ -52,17 +52,23 @@
 
                         <section class="card__details card__details--divided">
                             {% if not view.pools.isEmpty %}
-                                <ul class="split">
+                                <ul class="list--bare mbn">
                                     {% for pool in view.pools %}
-                                        <li>
-                                            <span class="split__title"><b>{{ pool.name }}</b></span>
-                                            <ul>
+                                        <li class="pvs mvn">
+                                            <h6 class="mvn"><b>{{ pool.name }}</b></h6>
+                                            <ul class="list--bare">
                                                 {% for deployment in deployment_pools[pool.id] %}
-                                                    <li>
-                                                        {{ deployment|formatDeploymentServer }}
+                                                    <li class="mbn">
+                                                        {% if server_collisions[deployment.server.id] %}
+                                                            <span class="tooltipped tooltipped-e" aria-label="{{ deployment.path }}">
+                                                                {{ deployment|formatDeploymentServer }}
+                                                            </span>
+                                                        {% else %}
+                                                            {{ deployment|formatDeploymentServer }}
+                                                        {% endif %}
                                                     </li>
                                                 {% else %}
-                                                    <li>None</li>
+                                                    <li class="mbn">None</li>
                                                 {% endfor %}
                                             </ul>
                                         </li>
