Dont use flex box on app status if env picker is empty

--- a/templates/application/status.twig
+++ b/templates/application/status.twig
@@ -43,15 +43,20 @@
         {# if no views and does not need views, only show env picker #}
         {{ block('env_picker') }}
     {% else %}
-        <div class="flex-box-wrapper mbl">
+        {% if environments|length > 1 %}
 
-            <div class="flex-box mbl">
-                  {{ block('env_picker') }}
+            <div class="flex-box-wrapper mbl">
+
+                <div class="flex-box mbl">
+                      {{ block('env_picker') }}
+                </div>
+                <div class="flex-box mbl">
+                      {{ block('view_picker') }}
+                </div>
             </div>
-            <div class="flex-box mbl">
-                  {{ block('view_picker') }}
-            </div>
-        </div>
+        {% else %}
+            {{ block('view_picker') }}
+        {% endif %}
     {% endif %}
 
 {% endblock %}
